feat: Add change default address functionality in frontend and backend and refine the address section of checkout page
